--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "module": "commonjs",
     "target": "es2020",
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
