--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@bullbitcoin/sdk",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": false,
   "description": "Bull Bitcoin API TypeScript SDK",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "ArthyFiciel <arthyficiel@gmail.com>",
   "license": "MIT",
   "scripts": {
