--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "declaration": true,
     "outDir": "./dist",
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ],
+    }
   },
   "include": [
     "src/**/*"
