--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "@bullbitcoin/sdk",
-  "version": "0.1.8",
+  "version": "0.3.0",
   "private": false,
   "description": "Bull Bitcoin API TypeScript SDK",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "author": "ArthyFiciel <arthyficiel@gmail.com>",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist/*",
-    "build": "yarn clean && tsc"
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "yarn clean && yarn build:cjs && yarn build:esm"
   },
   "files": [
-    "/dist"
+    "dist"
   ],
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
   "devDependencies": {
     "@types/node": "^20.11.28",
     "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "uuidv4": "^6.2.13"
   }
 }
