--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2020",
+    "target": "ES2020",
+    "strict": true,
     "declaration": true,
-    "outDir": "./dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
     "paths": {
       "~/*": [
         "./src/*"
-      ],
+      ]
     }
   },
   "include": [
-    "src/**/*"
+    "src"
   ]
 }
